minor issue fix
- relpace food spawn location when it overlaps with segments
- snake control logic managed

--- a/Game/Snake/style.css
+++ b/Game/Snake/style.css
@@ -78,8 +78,8 @@ body {
 
 #food {
     position: absolute;
-    width: 20px;
-    height: 20px;
+    width: 23px;
+    height: 23px;
     background-image: url('apple.png');
     background-size: cover;
     z-index: 1;
